--- a/index.css
+++ b/index.css
@@ -1,10 +1,48 @@
-body {
-    background-color: blueviolet;
-    text-align: center;
+html {
+    background: url("drums.jpg");
+    background-size: cover;
 }
-.key {
-    padding: 15px;
+
+body {
+   margin: 0;
+   padding: 0; 
+    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 .keys {
     display: flex;
+    flex: 1;
+    min-height: 100vh;
+    align-items: center;
+    justify-content: center;
 }
+
+.key{
+    border: .4rem solid purple;
+    border-radius: .5rem;
+    margin: 1rem;
+    font-size: 1,5rem;
+    padding: 1rem .5rem;
+    transition: all .09s ease;
+    width: 10rem;
+    text-align: center;
+    color: whitesmoke;
+    background: rgba(0,0,0,0.4);
+    text-shadow: 0 0 .5rem black;
+}
+
+.playing {
+    transform: scale(1.2);
+    border-color: rgb(228, 140, 228);
+    box-shadow: 0 0 1rem rgb(228, 140, 228);
+  }
+  kbd {
+    display: block;
+    font-size: 1.5rem;
+  }
+
+  .sound {
+    font-size: 1rem;
+    text-transform: uppercase;
+    letter-spacing: .1rem;
+    color: whitesmoke;
+  }
